--- a/italy_food.html
+++ b/italy_food.html
@@ -66,11 +66,53 @@
                     <img class="leaf2" src="./leaf2.png" alt="">
                     <img class="tomato" src="./Tomato1.png" alt="">
                 </div>
-                <img class="noodle-crop" src="./Spaghetti1_crop.png" alt="">
+                <img class="noodle-crop" src="./Spaghetti2_crop_upper.png" alt="">
             </div>
         </div>
         <div id="content">
-            <img class="noodle-crop-2" src="./" alt="">
+            <div class="noodle-crop-under">
+                <img class="noodle-crop-2" src="./Spaghetti2_crop_under.png" alt="">
+            </div>
+
+            <div class="choose_and_enjoy">
+                <h2 class="title-desc">CHOOSE & ENJOY</h2>
+                <span class="text-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span> 
+                <span class="text-desc-2"> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</span>
+            </div>
+
+            <div class="choose-enjoy-food-list">
+                <div class="group-food">
+                    <a href="">
+                        <img class="noodle-choose-enjoy" src="./noodle_choose_enjoy.png" alt="">
+                    </a>
+                    <h2>Lorem Ipsum Dolor</h2>
+                    <span class="text-desc"></span>
+                    <div class="order-btn">
+                        <a href="">Order Now</a>
+                    </div>
+                </div>
+                <div class="group-food-2">
+                    <a href="">
+                        <img class="bread-choose-enjoy" src="./Bread.png" alt="">
+                    </a>
+                    <h2>Lorem Ipsum Dolor</h2>
+                    <span class="text-desc"></span>
+                    <div class="order-btn">
+                        <a href="">Order Now</a>
+                    </div>
+                </div>
+                <div class="group-food-3">
+                    <a href="">
+                        <img class="vegetable-choose-enjoy" src="./vegetable_choose_enjoy.png" alt="">
+                    </a>
+                    <h2>Lorem Ipsum Dolor</h2>
+                    <span class="text-desc"></span>
+                    <div class="order-btn">
+                        <a href="">Order Now</a>
+                    </div>
+                </div>
+            </div>
+
         </div>
         <div id="slider"></div>
         <div id="more-content"></div>
