--- a/italy_food.html
+++ b/italy_food.html
@@ -145,11 +145,22 @@
                 </div>
             </div>
             <!-- Slider main container -->
-            <div class="try-it-advert">
-                
-            </div>
         </div>
-        <div id="more-content"></div>
+        <div id="more-content">
+                <div class="try-it-containter">
+                    <div class="try-it-one">
+                            <img src="./Image3.png" alt="">
+                    </div>
+                    <div class="group-try-it-right">
+                        <div class="try-it-two">
+                                <img src="./Image4.png" alt="">
+                        </div>
+                        <div class="try-it-three">
+                                <img src="./Image5.png" alt="">
+                        </div>
+                    </div>
+                </div>
+        </div>
         <div id="contact"></div>
         <div id="footer"></div>
     </div>
