--- a/italian-food/baitap2/index.html
+++ b/italian-food/baitap2/index.html
@@ -7,19 +7,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/home.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 </head>
 
 <body>
     <div class="wrap">
-        <div class="header">
-            <div class="hd-parent">
-                <img src="img/hd1.png" width="100%">
-                <div style="position:absolute; top:5%; left:5%;"><img src="img/hd8.png" alt=""></div>
-                <img src="img/hd2.png" width="40%" height="99.5%;" style="position:absolute; top:0;right:0;">
-                <div style="position:absolute; top:6%; right:10%;"><img src="img/Phone.png" alt=""></div>
-                <div style="position:absolute; top:5%; right:5%;"><img src="img/hd9.png" alt=""></div>
-                <div style="position:absolute; top:20%; left:5%;"><img src=" img/hd4.png " width="60px"></div>
-                <img src="img/hd3.png" width="50%" style="position:absolute; top:5%;left:38%;">
+        <div class="container-fluid" style="position: relative;">
+            <img src="img/hd1.png" width="100%">
+            <div class="container">
+                <div class="item5" style="position:absolute; top:5%; left:5%;"><img src="img/hd8.png" alt=""></div>
+                <img src="img/hd2.png" width="40%" height="100%%;" style="position:absolute; top:0;right:0;">
+                <div class="phone" style="position:absolute; top:6%; right:5%;">
+                    <img class="itemdt" src="img/Phone.png" style="margin-right: 40px">
+                    <img src="img/hd9.png">
+                </div>
+                <div class="item4" style="position:absolute; top:20%; left:5%;"><img src=" img/hd4.png " width="60px"></div>
+                <img src="img/hd3.png" width="50%" style="position:absolute; top:6%;left:38%;">
                 <div class="hd-menu ">
                     <li><a href="# ">HOME</a></li>
                     <li><a href="# ">MENU</a></li>
@@ -30,19 +36,29 @@
                     <img src="img/hdTitle.png" width="50%">
                     <img src="img/hdSubtitle.png" width="70%">
                     <img src="img/hdBody Text.png" width="70%" style="border-bottom: black 1px solid; padding-bottom:20px;">
+                    <div class="hd-title2">
+                        <img src="img/hd11.png" width="35%">
+                        <img src="img/hd12.png" width="25%">
+                        <div class="hd-bt"><button><img src="img/hd13.png" alt=""></button></div>
+                    </div>
                 </div>
-                <div style="position:absolute;top:18%;left:44%;"><img src="img/hdPasta.png" alt=""></div>
-                <div style="position:absolute;bottom:20%;left:40%;"><img src="img/hd6.png" alt=""></div>
-                <div style="position:absolute;bottom:21%;right:18%;"><img src="img/hd5.png" width="60px;"></div>
-                <div style="position:absolute;bottom:-28%;left:0;"><img src="img/hd7.png" alt=""></div>
-                <div class="hd-title2">
-                    <img src="img/hd11.png" width="40%">
-                    <img src="img/hd12.png" width="30%">
-                    <div class="hd-bt"><button><img src="img/hd13.png" alt=""></button></div>
+                <div class="item1"><img src="img/hdPasta.png" alt=""></div>
+                <div class="item2"><img src="img/hd6.png" alt=""></div>
+                <div class="item3"><img src="img/hd5.png" width="60px;"></div>
+                <div class="fl-left"><img src="img/hd7.png" alt=""></div>
+                <button class="btnPr btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><i class="fas fa-bars"></i></button>
+                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+                    <div class="offcanvas-header">
+                        <h5 id="offcanvasRightLabel">ODER</h5>
+                        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                        ...
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="container ">
+        <div class="container-fluid ctn" style="position: relative !important;height: 700px !important;">
             <div class="ctn-pr">
                 <div style="display:flex;justify-content: center;margin: 40px 0;"><img src="img/ctnTitle.png" alt=""></div>
                 <div class="ctn-title">
@@ -77,43 +93,47 @@
                 </div>
             </div>
         </div>
-        <div class="menu">
-            <div style="display:flex;justify-content: center;margin: 40px 0;"><img src="img/ctn5.png" alt=""></div>
-            <div style="width:700px; text-align:center;margin: 20px auto;">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
-            </div>
-            <div class="slideFrom">
-                <div class="fromSlide">
-                        <div class="slidePr" onclick="myFun()"><a href="#"><img  class="three" src="img/ctn6.png" width="100%"></a></div>
-                        <div class="slideLeft">
-                            <a href="#"><img  class="one" src="img/ctn7.png" width="100%;"></a>
-                        </div>
-                        <div class="slideRight">
-                            <a href="#"><img  class="two" src="img/ctn8.png" width="100%;"></a>
-                        </div>
+        <div class="slideshow">
+            <div class="swiper mySwiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide slides">
+                        <img class="three" src="img/ctn6.png" width="100%">
                     </div>
-            </div>
-            <div class="dotPr" style="text-align:center">
-              <span class="dot" onclick="currentSlide()"></span> 
-              <span class="dot" onclick="currentSlide2()"></span> 
-              <span class="dot" onclick="currentSlide3()"></span> 
-            </div>
-            <div class="menu-list">
-                <div class="menu-left">
-                    <div>
-                        <img src="img/ctn9.png" alt="">
-                        <div style="position: absolute;top: 10%;left: 6%;"><img src="img/ctn9Text.png" alt=""></div>
+                    <div class="swiper-slide slides">
+                        <img class="three" src="img/ctn6.png" width="100%">
+                    </div>
+                    <div class="swiper-slide slides">
+                        <img class="three" src="img/ctn6.png" width="100%">
+                    </div>
+                    <div class="swiper-slide slides">
+                        <img class="three" src="img/ctn6.png" width="100%">
+                    </div>
+                    <div class="swiper-slide slides">
+                        <img class="three" src="img/ctn6.png" width="100%">
+                    </div>
+                    <div class="swiper-slide slides">
+                        <img class="three" src="img/ctn6.png" width="100%">
                     </div>
                 </div>
-                <div class="menu-right">
-                    <div style="margin-bottom: 32px">
-                        <img src="img/ctn10.png" alt="">
-                        <div style="position: absolute;top: 10%;left: 7%;"><img src="img/ctn10Text.png" width: 230px;></div>
-                    </div>
-                    <div>
-                        <img src="img/ctn11.png" alt="">
-                        <div style="position: absolute;top: 66%;left: 6%;"><img src="img/ctn11Text.png" width: 230px;></div>
-                    </div>
+                <div class="swiper-pagination"></div>
+            </div>
+        </div>
+        <div class="menu">
+            <div class="menu-list">
+                <div class="menuItem1">
+                    <img src="img/ctn9.png" alt="">
+                    <h3>TRY IT TODAY</h3>
+                    <h2>MOST POPULAR PADSTA</h2>
+                </div>
+                <div class="menuItem2">
+                    <img src="img/ctn10.png" alt="">
+                    <h3>TRY IT TODAY</h3>
+                    <h2>MOST POPULAR PADSTA</h2>
+                </div>
+                <div class="menuItem3">
+                    <img src="img/ctn11.png" alt="">
+                    <h3>TRY IT TODAY</h3>
+                    <h2>MOST POPULAR PADSTA</h2>
                 </div>
             </div>
             <div class="in4">
@@ -127,7 +147,7 @@
                     <div class="input-right">
                         <div class="input-item"><input type="text" placeholder="NAME"></div>
                         <div class="input-item"><input type="text" placeholder="NAME"></div>
-                        <div class="hd-bt"><button style="width:325px;margin: 20px 0 0 20px;"><h3>FIND A TABLE</h3></button></div>
+                        <div class="mn-bt"><button><h3>FIND A TABLE</h3></button></div>
                     </div>
                 </div>
             </div>
@@ -135,56 +155,48 @@
         <div class="footer">
             <div class="ft-pr">
                 <img src="img/ft1.png" width="100%">
-                <div class="ft-left" style="position:absolute;top: 15%;left: 10%;">
+                <div class="ft-left">
                     <img src="img/ft2.png" alt="">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viver ra maecenas accumsan lacus vel facilisis. </p>
-                    <span style="color:#ffff; margin-top:40px;">© Company Name 2020. All rights reserved.</span>
+                    <span>© Company Name 2020. All rights reserved.</span>
                 </div>
                 <div class="ft-right">
-                    <div style="position:absolute;top: 40%;right: 18%;">
+                    <div class="ft-item">
                         <img src="img/ft3.png" alt="">
-                        <span style="color:#ffff;margin-left:10px;width:240px;float:right;;margin-top:20px">Main Road, Building Name, Country</span>
+                        <span style="color:#ffff;margin-left:10px;width:300px;float:left;">Main Road, Building Name, Country</span>
                     </div>
-                    <div style="position:absolute;top: 51%;right: 18%;">
+                    <div class="ft-item2">
                         <img src="img/ft4.png" alt="">
-                        <span style="color:#ffff;margin-left:10px;width:240px;float:right;margin-top:9px">info@companyname.com</span>
-                    </div>
-                    <div class="ft-mxh">
-                        <a href="#"><img src="img/ftinsta.png" alt=""></a>
-                        <a href="#"><img src="img/ftfb.png" alt=""></a>
-                        <a href="#"><img src="img/fttw.png" alt=""></a>
-                        <a href="#"><img src="img/ftwa.png" alt=""></a>
+                        <span style="color:#ffff;margin-left:10px;width:300px;float:left;">info@companyname.com</span>
                     </div>
                 </div>
-
+                <div class="ft-mxh">
+                    <a href="#"><img src="img/ftinsta.png" alt=""></a>
+                    <a href="#"><img src="img/ftfb.png" alt=""></a>
+                    <a href="#"><img src="img/fttw.png" alt=""></a>
+                    <a href="#"><img src="img/ftwa.png" alt=""></a>
+                </div>
             </div>
         </div>
     </div>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
+    <!-- Initialize Swiper -->
+    <script>
+        var swiper = new Swiper(".mySwiper", {
+            slidesPerView: 3,
+            spaceBetween: 30,
+            freeMode: true,
+            autoplay: {
+                delay: 3000,
+                disableOnInteraction: false,
+            },
+            pagination: {
+                el: ".swiper-pagination",
+                clickable: true,
+            },
+        });
+    </script>
 </body>
-<script>
-    
-    var gaoA = document.querySelector('.one');
-    var gaoB = document.querySelector('.two');
-    var gaoC = document.querySelector('.three');
-    var hinh1 = "img/ctn6.png";
-    var hinh2 = "img/ctn7.png";
-    var hinh3 = "img/ctn8.png";
-
-    function myFun() {
-        gaoC.src = hinh3; 
-    }
-
-    function currentSlide() {
-        gaoC.src = hinh2
-    }
-
-    function currentSlide2() {
-        gaoC.src = hinh1
-    }
-
-    function currentSlide3() {
-        gaoC.src = hinh3
-    }
-</script>
 
 </html>
