--- a/italy_food.html
+++ b/italy_food.html
@@ -162,14 +162,22 @@
         <div id="more-content">
                 <div class="try-it-containter">
                     <div class="try-it-one">
-                            <img src="./Image3.png" alt="">
+                        <h3>Try It Today</h3>
+                        <h2 class="title-more-content-one">Most Popular</h2>
+                        <h2 class="title-more-content-two">Pasta</h2>
+                        <img src="./Image31.png" alt="">
                     </div>
                     <div class="group-try-it-right">
                         <div class="try-it-two">
-                                <img src="./Image4.png" alt="">
+                            <h3>Try It Today</h3>
+                            <!-- <h2>More Fun</h2>
+                            <h2>More Taste</h2> -->
+                            <img src="./Image41.png" alt="">
                         </div>
                         <div class="try-it-three">
-                                <img src="./Image5.png" alt="">
+                            <!-- <h3>Try It Today</h3>
+                            <h2>Fresh & Chili</h2> -->
+                            <img src="./Image51.png" alt="">
                         </div>
                     </div>
                 </div>
