--- a/italy_food.html
+++ b/italy_food.html
@@ -20,7 +20,7 @@
         <div id="header">
             <div class="top-nav">
                 <div class="logo">
-                    <a href=""> <img src="./food_4_you.png" alt=""> </a>
+                    <a href=""> <img src="./img_and_fonts/image/food_4_you.png" alt=""> </a>
                 </div>
                 <div class="group-right">
                     <div class="logo-contact">
@@ -28,7 +28,7 @@
                         <h3>1800 258 888</h3>
                     </div>
                     <div class="iphone-logo">
-                        <a href=""> <img src="./iPhone.png" alt=""> </a>
+                        <a href=""> <img src="./img_and_fonts/image/iPhone.png" alt=""> </a>
                     </div>
                 </div>
 
@@ -42,11 +42,11 @@
                 </ul>
             </div>
         </div>
-        <div id="banner">
+        <div class="banner">
             <div class="banner-color">
                 <div class="col-left">
                     <div class="group-item-1">
-                        <img src="./Leaf1.png" alt="">
+                        <img src="./img_and_fonts/image/Leaf1.png" alt="">
                         <h2>Are You Hungry?</h2>
                     </div>
     
@@ -64,16 +64,16 @@
                     </div>
                 </div>
                 <div class="col-right">
-                    <a href=""> <img class="spaghetti" src="./dishes_spaghetti.png" alt=""> </a>
-                    <img class="leaf2" src="./leaf2.png" alt="">
-                    <img class="tomato" src="./Tomato1.png" alt="">
+                    <a href=""> <img class="spaghetti" src="./img_and_fonts/image/dishes_spaghetti.png" alt=""> </a>
+                    <img class="leaf2" src="./img_and_fonts/image/leaf2.png" alt="">
+                    <img class="tomato" src="./img_and_fonts/image/Tomato1.png" alt="">
                 </div>
-                <img class="noodle-crop" src="./Spaghetti2_crop_upper.png" alt="">
+                <img class="noodle-crop" src="./img_and_fonts/image/Spaghetti2_crop_upper.png" alt="">
             </div>
         </div>
-        <div id="content">
+        <div class="content">
             <div class="noodle-crop-under">
-                <img class="noodle-crop-2" src="./Spaghetti2_crop_under.png" alt="">
+                <img class="noodle-crop-2" src="./img_and_fonts/image/Spaghetti2_crop_under.png" alt="">
             </div>
 
             <div class="choose_and_enjoy">
@@ -85,7 +85,7 @@
             <div class="choose-enjoy-food-list">
                 <div class="group-food">
                     <a href="">
-                        <img class="noodle-choose-enjoy" src="./noodle_choose_enjoy.png" alt="">
+                        <img class="noodle-choose-enjoy" src="./img_and_fonts/image/noodle_choose_enjoy.png" alt="">
                     </a>
                     <h2>Lorem Ipsum Dolor</h2>
                     <span class="text-desc">Lorem ipsum dolor sit amet, consectetur</span>
@@ -96,7 +96,7 @@
                 </div>
                 <div class="group-food-2">
                     <a href="">
-                        <img class="bread-choose-enjoy" src="./Bread.png" alt="">
+                        <img class="bread-choose-enjoy" src="./img_and_fonts/image/Bread.png" alt="">
                     </a>
                     <h2>Lorem Ipsum Dolor</h2>
                     <span class="text-desc">Lorem ipsum dolor sit amet, consectetur </span> 
@@ -107,7 +107,7 @@
                 </div>
                 <div class="group-food-3">
                     <a href="">
-                        <img class="vegetable-choose-enjoy" src="./vegetable_choose_enjoy.png" alt="">
+                        <img class="vegetable-choose-enjoy" src="./img_and_fonts/image/vegetable_choose_enjoy.png" alt="">
                     </a>
                     <h2>Lorem Ipsum Dolor</h2>
                     <span class="text-desc">Lorem ipsum dolor sit amet, consectetur </span>
@@ -119,7 +119,7 @@
             </div>
 
         </div>
-        <div id="slider">
+        <div class="slider">
             <div class="up_coming_event">
                 <h3>Discover</h3>
                 <h2 class="title-desc">Upcoming event</h2>
@@ -132,25 +132,25 @@
                   <div class="swiper-slide">
                     <div class="test">
                         <div class="set-overlay"></div>
-                        <img src="./pizza_slider_1.jpg" alt="">
+                        <img src="./img_and_fonts/image/pizza_slider_1.jpg" alt="">
                     </div>
                 </div>
                   <div class="swiper-slide">
                     <div class="test">
                         <div class="set-overlay"></div>
-                        <img src="./noodle_slider.jpg" alt="">
+                        <img src="./img_and_fonts/image/noodle_slider.jpg" alt="">
                     </div>
                 </div>
                   <div class="swiper-slide">
                     <div class="test">
                         <div class="set-overlay"></div>
-                        <img src="./pizza_slider_2.jpg" alt="">
+                        <img src="./img_and_fonts/image/pizza_slider_2.jpg" alt="">
                     </div>
                 </div>
                   <div class="swiper-slide">
                     <div class="test">
                         <div class="set-overlay"></div>
-                        <img src="./pizza_slider_3.jpg" alt="">
+                        <img src="./img_and_fonts/image/pizza_slider_3.jpg" alt="">
                     </div>
                 </div>
                 </div>
@@ -163,27 +163,53 @@
                 <div class="try-it-containter">
                     <div class="try-it-one">
                         <h3>Try It Today</h3>
-                        <h2 class="title-more-content-one">Most Popular</h2>
-                        <h2 class="title-more-content-two">Pasta</h2>
-                        <img src="./Image31.png" alt="">
+                        <h2 class="title-more-content word_one">Most</h2>
+                        <h2 class="title-more-content word_two">Popular</h2>
+                        <h2 class="title-more-content word_three">Pasta</h2>
+                        <img src="./img_and_fonts/image/Image31.png" alt="">
                     </div>
                     <div class="group-try-it-right">
                         <div class="try-it-two">
                             <h3>Try It Today</h3>
-                            <!-- <h2>More Fun</h2>
-                            <h2>More Taste</h2> -->
-                            <img src="./Image41.png" alt="">
+                            <h2 class="title-more-content word_one">More Fun</h2>
+                            <h2 class="title-more-content word_two">More Taste</h2>
+                            <img src="./img_and_fonts/image/Image41.png" alt="">
                         </div>
                         <div class="try-it-three">
-                            <!-- <h3>Try It Today</h3>
-                            <h2>Fresh & Chili</h2> -->
-                            <img src="./Image51.png" alt="">
+                            <h3>Try It Today</h3>
+                            <h2 class="title-more-content word_one">Fresh & Chili</h2>
+                            <img src="./img_and_fonts/image/Image51.png" alt="">
                         </div>
                     </div>
                 </div>
         </div>
-        <div id="contact"></div>
-        <div id="footer"></div>
+        <div id="contact">
+            <div class="book-table-title">
+                <h3>Reservation</h3>
+                <h1>Book Your Table</h1>
+            </div>
+            <div class="form-infor">
+                <input type="text" placeholder="Name">
+                <input type="text" placeholder="Email">
+                <input type="text" placeholder="Date">
+                <input type="text" placeholder="Time">
+                <input type="text" placeholder="People">
+                <div class="book-btn">    
+                <a href="">Find A Table</a>
+                </div>
+            </div>
+        </div>
+        <div id="footer">
+            <div class="footer-group"></div>
+            <div class="footer-group">
+                <div class="footer-desc"></div>
+                <div class="footer-infor"></div>
+            </div>
+            <div class="footer-group">
+                <div class="footer-sign"></div>
+                <div class="footer-social_media"></div>
+            </div>
+        </div>
     </div>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script>
@@ -244,23 +270,5 @@
           ]);
         });
       </script>
-    <!-- <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script> -->
-    <!-- <script>
-        const swiper = new Swiper('.swiper', {
-            autoplay: {
-                delay: 3000,
-                disableOnInteraction: false,
-            },
-        loop: true,
-        pagination: {
-            el: '.swiper-pagination',
-            clickable: true,
-        },
-        navigation: {
-            nextEl: '.swiper-button-next',
-            prevEl: '.swiper-button-prev',
-        },
-        });
-    </script> -->
 </body>
 </html>
