--- a/italy_food.html
+++ b/italy_food.html
@@ -200,14 +200,39 @@
             </div>
         </div>
         <div id="footer">
-            <div class="footer-group"></div>
-            <div class="footer-group">
-                <div class="footer-desc"></div>
-                <div class="footer-infor"></div>
+            <div class="footer-group-one">
+                <div class="logo-footer">
+                    <img src="./img_and_fonts/image/food_4_you_footer.png" alt="">
+                </div>
             </div>
-            <div class="footer-group">
-                <div class="footer-sign"></div>
-                <div class="footer-social_media"></div>
+            <div class="footer-group-two">
+                <div class="footer-desc">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do <br> eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua. <br> Quis ipsum suspendisse ultrices gravida.
+                        Risus commodo viver <br> ra maecenas accumsan lacus vel facilisis.
+                    </p>
+                </div>
+                <div class="footer-infor">
+                    <div class="footer-infor-group-one">
+                        <img src="./img_and_fonts/image/Location_Icon.png" class="location" alt="">  
+                        <h2 class="address">Main Road, Building Name, Country</h2>
+                    </div>
+                    <div class="footer-infor-group-two">
+                        <img src="./img_and_fonts/image/Email_Icon.png" class="email" alt=""> 
+                        <h2 class="company-email">infor@companyname.com</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-group-three">
+                <div class="footer-sign">
+                    <h2>@Company Name 2020. All rights reserved.</h2>
+                </div>
+                <div class="footer-social_media">
+                    <img src="./img_and_fonts/image/Instagram.png" alt="">
+                    <img src="./img_and_fonts/image/Facebook.png" alt="">
+                    <img src="./img_and_fonts/image/Twitter.png" alt="">
+                    <img src="./img_and_fonts/image/WhatsApp.png" alt="">
+                </div>
             </div>
         </div>
     </div>
