--- a/italian-food-thenm/index.html
+++ b/italian-food-thenm/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
     <link href="//db.onlinewebfonts.com/c/1fbe10678e637530067167465205839f?family=Gabelisa" rel="stylesheet" type="text/css"/>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header class="header-page">
@@ -212,6 +212,6 @@
       type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
     ></script>
-    <script src="/js/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
