--- a/italy_food.html
+++ b/italy_food.html
@@ -89,41 +89,44 @@
                 <h2 class="text-desc-2"> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h2>
             </div>
 
-            <div class="choose-enjoy-food-list">
-                <div class="group-food">
-                    <a href="">
-                        <img class="noodle-choose-enjoy" src="./img_and_fonts/image/noodle_choose_enjoy.png" alt="">
-                    </a>
-                    <h2>Lorem Ipsum Dolor</h2>
-                    <span class="text-desc">Lorem ipsum dolor sit amet, consectetur</span>
-                    <span class="text-desc-2"> adipiscing elit, sed do</span>
-                    <div class="order-btn">
-                        <a href="">Order Now</a>
+            <div class="box-choose">
+                <div class="choose-enjoy-food-list">
+                    <div class="group-food">
+                        <a href="">
+                            <img class="noodle-choose-enjoy" src="./img_and_fonts/image/noodle_choose_enjoy.png" alt="">
+                        </a>
+                        <h2>Lorem Ipsum Dolor</h2>
+                        <span class="text-desc">Lorem ipsum dolor sit amet, consectetur</span>
+                        <span class="text-desc-2"> adipiscing elit, sed do</span>
+                        <div class="order-btn">
+                            <a href="">Order Now</a>
+                        </div>
                     </div>
-                </div>
-                <div class="group-food-2">
-                    <a href="">
-                        <img class="bread-choose-enjoy" src="./img_and_fonts/image/Bread.png" alt="">
-                    </a>
-                    <h2>Lorem Ipsum Dolor</h2>
-                    <span class="text-desc">Lorem ipsum dolor sit amet, consectetur </span> 
-                    <span class="text-desc-2"> adipiscing elit, sed do</span>
-                    <div class="order-btn">
-                        <a href="">Order Now</a>
+                    <div class="group-food-2">
+                        <a href="">
+                            <img class="bread-choose-enjoy" src="./img_and_fonts/image/Bread.png" alt="">
+                        </a>
+                        <h2>Lorem Ipsum Dolor</h2>
+                        <span class="text-desc">Lorem ipsum dolor sit amet, consectetur </span> 
+                        <span class="text-desc-2"> adipiscing elit, sed do</span>
+                        <div class="order-btn">
+                            <a href="">Order Now</a>
+                        </div>
                     </div>
-                </div>
-                <div class="group-food-3">
-                    <a href="">
-                        <img class="vegetable-choose-enjoy" src="./img_and_fonts/image/vegetable_choose_enjoy.png" alt="">
-                    </a>
-                    <h2>Lorem Ipsum Dolor</h2>
-                    <span class="text-desc">Lorem ipsum dolor sit amet, consectetur </span>
-                    <span class="text-desc-2"> adipiscing elit, sed do</span>
-                    <div class="order-btn">
-                        <a href="">Order Now</a>
+                    <div class="group-food-3">
+                        <a href="">
+                            <img class="vegetable-choose-enjoy" src="./img_and_fonts/image/vegetable_choose_enjoy.png" alt="">
+                        </a>
+                        <h2>Lorem Ipsum Dolor</h2>
+                        <span class="text-desc">Lorem ipsum dolor sit amet, consectetur </span>
+                        <span class="text-desc-2"> adipiscing elit, sed do</span>
+                        <div class="order-btn">
+                            <a href="">Order Now</a>
+                        </div>
                     </div>
                 </div>
             </div>
+            
 
         </div>
         <div class="slider">
